# ytdlg

./: Cargo.toml  Makefile  output.json
src/: consts.rs  dl.rs  main.rs  ytdl.rs
src/sums/: mod.rs  youtube-dl.exe.sum  youtube-dl.sum
