[package]
name = "ytdlg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
cfg-if = "1.0.0"
const_format = "0.2.26"
dirs = "4.0.0"
eframe = { version = "0.18.0", features = ["dark-light"] }
egui = "0.18.1"
hex = { version = "0.4.3", features = ["serde"] }
human-panic = "1.0.3"
lazy_static = "1.4.0"
native-dialog = "0.6.3"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
sha2 = "0.10.2"
